# lxqt-session

./: .gitignore  580.diff  CHANGELOG  CMakeLists.txt  CMakeLists.txt.lxqt-common  README.md  lxqt-config-session.ts  lxqt-config-session_ar.ts  lxqt-config-session_ca.ts  lxqt-config-session_cs.ts  lxqt-config-session_cs_CZ.ts  lxqt-config-session_da.ts  lxqt-config-session_da_DK.ts  lxqt-config-session_de.ts  lxqt-config-session_el.ts  lxqt-config-session_eo.ts  lxqt-config-session_es.ts  lxqt-config-session_es_UY.ts  lxqt-config-session_es_VE.ts  lxqt-config-session_eu.ts  lxqt-config-session_fi.ts  lxqt-config-session_fr.ts  lxqt-config-session_fr_FR.ts  lxqt-config-session_hu.ts  lxqt-config-session_ia.ts  lxqt-config-session_id.ts  lxqt-config-session_id_ID.ts  lxqt-config-session_it.ts  lxqt-config-session_ja.ts  lxqt-config-session_ko.ts  lxqt-config-session_lt.ts  lxqt-config-session_nl.ts  lxqt-config-session_pl.ts  lxqt-config-session_pl_PL.ts  lxqt-config-session_pt.ts  lxqt-config-session_pt_BR.ts  lxqt-config-session_ro_RO.ts  lxqt-config-session_ru.ts  lxqt-config-session_sk_SK.ts  lxqt-config-session_sl.ts  (+80 more)
config/: CMakeLists.txt  lxqt-hyprland.conf  lxqt-sway.config  lxqt-wayfire.ini  lxqt.conf  session.conf  waylandwindowmanagers.conf  windowmanagers.conf
config/labwc/: autostart  environment  menu.xml  rc.xml
config/openbox/: menu.xml  rc.xml  rc.xml.in
lxqt-config-session/: CMakeLists.txt  autostartedit.cpp  autostartedit.h  autostartedit.ui  autostartitem.cpp  autostartitem.h  autostartmodel.cpp  autostartmodel.h  autostartpage.cpp  autostartpage.h  autostartpage.ui  autostartutils.cpp  autostartutils.h  basicsettings.cpp  basicsettings.h  basicsettings.ui  defaultappspage.cpp  defaultappspage.h  environmentpage.cpp  environmentpage.h  environmentpage.ui  lxqt-config-session.desktop.in  main.cpp  modulemodel.cpp  modulemodel.h  sessionconfigwindow.cpp  sessionconfigwindow.h  userlocationspage.cpp  userlocationspage.h  waylandsettings.cpp  waylandsettings.h  waylandsettings.ui  x11settings.cpp  x11settings.h  x11settings.ui
lxqt-config-session/man/: lxqt-config-session.1
lxqt-config-session/translations/: CMakeLists.txt  lxqt-config-session.desktop.yaml  lxqt-config-session.ts  lxqt-config-session.ts.src  lxqt-config-session.tsv  lxqt-config-session_ar.desktop  lxqt-config-session_ar.desktop.yaml  lxqt-config-session_ar.ts  lxqt-config-session_ar.tsv  lxqt-config-session_arn.ts  lxqt-config-session_arn.tsv  lxqt-config-session_ast.ts  lxqt-config-session_ast.tsv  lxqt-config-session_bg.desktop.yaml  lxqt-config-session_bg.ts  lxqt-config-session_bg.tsv  lxqt-config-session_ca.desktop.yaml  lxqt-config-session_ca.ts  lxqt-config-session_ca.tsv  lxqt-config-session_cs.desktop  lxqt-config-session_cs.desktop.yaml  lxqt-config-session_cs.ts  lxqt-config-session_cs.tsv  lxqt-config-session_cs_CZ.desktop  lxqt-config-session_cs_CZ.ts  lxqt-config-session_cy.ts  lxqt-config-session_cy.tsv  lxqt-config-session_da.desktop  lxqt-config-session_da.desktop.yaml  lxqt-config-session_da.ts  lxqt-config-session_da.tsv  lxqt-config-session_da_DK.desktop  lxqt-config-session_da_DK.ts  lxqt-config-session_de.desktop  lxqt-config-session_de.desktop.yaml  lxqt-config-session_de.ts  lxqt-config-session_de.tsv  lxqt-config-session_de_DE.desktop  lxqt-config-session_de_DE.ts  lxqt-config-session_el.desktop.yaml  (+165 more)
lxqt-leave/: CMakeLists.txt  keyenterreceiver.cpp  keyenterreceiver.h  leavedialog.cpp  leavedialog.h  leavedialog.ui  listwidget.cpp  listwidget.h  main.cpp
lxqt-leave/resources/: lxqt-hibernate.desktop.in  lxqt-leave.1  lxqt-leave.desktop.in  lxqt-lockscreen.desktop.in  lxqt-logout.desktop.in  lxqt-reboot.desktop.in  lxqt-shutdown.desktop.in  lxqt-suspend.desktop.in
lxqt-leave/translations/: CMakeLists.txt  lxqt-hibernate.desktop.yaml  lxqt-hibernate_ar.desktop.yaml  lxqt-hibernate_bg.desktop.yaml  lxqt-hibernate_ca.desktop.yaml  lxqt-hibernate_cs.desktop.yaml  lxqt-hibernate_da.desktop.yaml  lxqt-hibernate_de.desktop.yaml  lxqt-hibernate_el.desktop  lxqt-hibernate_el.desktop.yaml  lxqt-hibernate_el_GR.desktop  lxqt-hibernate_en_GB.desktop.yaml  lxqt-hibernate_es.desktop  lxqt-hibernate_es.desktop.yaml  lxqt-hibernate_et.desktop.yaml  lxqt-hibernate_eu.desktop.yaml  lxqt-hibernate_fi.desktop.yaml  lxqt-hibernate_fr.desktop.yaml  lxqt-hibernate_he.desktop.yaml  lxqt-hibernate_hr.desktop.yaml  lxqt-hibernate_hu.desktop.yaml  lxqt-hibernate_it.desktop  lxqt-hibernate_it.desktop.yaml  lxqt-hibernate_ja.desktop  lxqt-hibernate_ja.desktop.yaml  lxqt-hibernate_ka.desktop.yaml  lxqt-hibernate_kk.desktop.yaml  lxqt-hibernate_ko.desktop.yaml  lxqt-hibernate_lg.desktop.yaml  lxqt-hibernate_lt.desktop.yaml  lxqt-hibernate_nb_NO.desktop.yaml  lxqt-hibernate_nl.desktop.yaml  lxqt-hibernate_oc.desktop.yaml  lxqt-hibernate_pl.desktop.yaml  lxqt-hibernate_pt.desktop.yaml  lxqt-hibernate_pt_BR.desktop.yaml  lxqt-hibernate_ru.desktop.yaml  lxqt-hibernate_sk.desktop.yaml  lxqt-hibernate_sl.desktop.yaml  lxqt-hibernate_sv.desktop.yaml  (+328 more)
lxqt-session/: CMakeLists.txt
lxqt-session/man/: lxqt-session.1
lxqt-session/resources/: xdg-mime  xdg-open  xdg-screensaver
lxqt-session/src/: UdevNotifier.cpp  UdevNotifier.h  lockscreenmanager.cpp  lockscreenmanager.h  log.cpp  log.h  lxqtmodman.cpp  lxqtmodman.h  main.cpp  numlock.cpp  numlock.h  procreaper.cpp  procreaper.h  sessionapplication.cpp  sessionapplication.h  sessiondbusadaptor.h  startrazor  windowmanager.cpp  windowmanager.h  wmselectdialog.cpp  wmselectdialog.h  wmselectdialog.ui
lxqt-session/translations/: CMakeLists.txt  lxqt-session.ts  lxqt-session.ts.src  lxqt-session_ar.ts  lxqt-session_arn.ts  lxqt-session_ast.ts  lxqt-session_bg.ts  lxqt-session_ca.ts  lxqt-session_cs.ts  lxqt-session_cs_CZ.ts  lxqt-session_cy.ts  lxqt-session_da.ts  lxqt-session_da_DK.ts  lxqt-session_de.ts  lxqt-session_de_DE.ts  lxqt-session_el.ts  lxqt-session_el_GR.ts  lxqt-session_en_GB.ts  lxqt-session_eo.ts  lxqt-session_es.ts  lxqt-session_es_UY.ts  lxqt-session_es_VE.ts  (+49 more)
xsession/: CMakeLists.txt  lxde-qt.desktop.in  lxqt.desktop.in
(+183 files in other folders)
